--- a/scripts/7/html/index.html
+++ b/scripts/7/html/index.html
@@ -23,7 +23,7 @@ Commercial support is available at
 
 <p><em>Thank you for using nginx.</em></p><br/>
 <p>Page auto create by ActVPS Scripts, more detail at:
-<a href="https://actcms.work/">https://actcms.work</a>.<br/></p>
+<a href="http://actcms.work:1982/">http://actcms.work:1982</a>.<br/></p>
 
 
 </body>
